--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,10 @@ vendor/bundle
 bin/start.sh
 
 .DS_Store
+
+/public/packs
+/public/packs-test
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
