Add 401 unauthorized page

--- a/nginx.conf.d/rewrite.conf
+++ b/nginx.conf.d/rewrite.conf
@@ -1,5 +1,11 @@
   client_max_body_size 2m;
 
+  error_page 401 /401.html;
+  location /401.html {
+    root /home/dokku/spicyham/public;
+    internal;
+  }
+
   error_page 403 /403.html;
   location /403.html {
     root /home/dokku/spicyham/public;
