--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@rails/ujs": "^6.0.3-1",
     "@rails/webpacker": "5.1.1",
     "bootstrap": "^4.5.0",
+    "clipboard": "^2.0.6",
     "core-js": "^3.6.5",
     "expose-loader": "^0.7.5",
     "jquery": "^3.5.1",
