--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
     "regenerator-runtime": "^0.13.5",
-    "resolve-url-loader": "^3.1.1"
+    "resolve-url-loader": "^3.1.1",
+    "node-forge": "^0.10.0"
   },
   "devDependencies": {
     "webpack-dev-server": "^3.11.0"
