--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "core-js": "^3.6.5",
     "expose-loader": "^0.7.5",
     "jquery": "^3.5.1",
+    "node-forge": "^1.3.0",
     "popper.js": "^1.16.1",
     "regenerator-runtime": "^0.13.5",
-    "resolve-url-loader": "^3.1.1",
-    "node-forge": "^0.10.0"
+    "resolve-url-loader": "^3.1.1"
   },
   "devDependencies": {
     "webpack-dev-server": "^3.11.0"
