--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "bootstrap": "^4.5.0",
     "clipboard": "^2.0.6",
     "core-js": "^3.6.5",
-    "expose-loader": "^0.7.5",
+    "expose-loader": "^3.1.0",
     "jquery": "^3.5.1",
     "node-forge": "^1.3.0",
     "popper.js": "^1.16.1",
     "regenerator-runtime": "^0.13.5",
-    "resolve-url-loader": "^3.1.1"
+    "resolve-url-loader": "^3.1.1",
+    "webpack": "^5.70.0"
   },
   "devDependencies": {
     "webpack-dev-server": "^4.7.4"
