--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "popper.js": "^1.16.1",
     "regenerator-runtime": "^0.13.5",
     "resolve-url-loader": "^3.1.1",
-    "webpack": "^5.70.0"
+    "webpack": "^5.70.0",
+    "glob-parent": "^6.0.2",
+    "nth-check": "^2.0.1"
   },
   "devDependencies": {
     "webpack-dev-server": "^4.7.4"
