--- a/package.json
+++ b/package.json
@@ -14,18 +14,16 @@
     "bootstrap": "^4.5.0",
     "clipboard": "^2.0.6",
     "core-js": "^3.6.5",
-    "expose-loader": "^3.1.0",
+    "expose-loader": "^1.0.3",
     "glob-parent": "^6.0.2",
     "jquery": "^3.5.1",
     "node-forge": "^1.3.0",
     "nth-check": "^2.0.1",
     "popper.js": "^1.16.1",
     "regenerator-runtime": "^0.13.5",
-    "resolve-url-loader": "^3.1.1",
-    "webpack": "^5.70.0"
+    "resolve-url-loader": "^3.1.1"
   },
   "devDependencies": {
-    "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4"
   }
 }
