--- a/package.json
+++ b/package.json
@@ -11,19 +11,20 @@
   "dependencies": {
     "@rails/ujs": "^6.1.7-8",
     "@rails/webpacker": "5.4.3",
-    "bootstrap": "^4.5.0",
+    "babel": "^5.8.38",
+    "bootstrap": "^4.5.3",
     "clipboard": "^2.0.6",
     "core-js": "^3.6.5",
-    "expose-loader": "^0.7.4",
+    "expose-loader": "^0.7.5",
     "glob-parent": "^6.0.2",
-    "jquery": "^3.5.1",
+    "jquery": "^3.7.1",
     "node-forge": "^1.3.0",
     "nth-check": "^2.0.1",
     "popper.js": "^1.16.1",
     "regenerator-runtime": "^0.13.5",
-    "resolve-url-loader": "^3.1.1"
+    "resolve-url-loader": "^5.0.0"
   },
   "devDependencies": {
-    "webpack-dev-server": "^4.7.4"
+    "webpack-dev-server": "^4.15.1"
   }
 }
