--- a/app.json
+++ b/app.json
@@ -1,4 +1,9 @@
 {
+  "name": "Spicyham",
+  "description": "A service to setup email aliases for every service you sign up to.",
+  "keywords": [
+    "email",
+  ],
   "healthchecks": {
     "web": [
       {
