--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "url": "https://github.com/ollej"
   },
   "dependencies": {
-    "@rails/ujs": "^6.1.7-8",
+    "@rails/ujs": "^7.1.501",
     "@rails/webpacker": "5.4.3",
     "babel": "^5.8.38",
     "bootstrap": "^4.5.3",
